==> QuantumLeaps/qpcpp-examples/arm-cm/blinky_nucleo-h533re/qk/bsp.cpp <==
#include "qpcpp.hpp"      // QP/C++ real-time event framework
#include "bsp.hpp"        // Board Support Package
#include "app.hpp"        // Application
#include "stm32h533xx.h"  // CMSIS-compliant header file for the MCU used
#define HSI_CLK_DIV 2U  // 64MHz/8 == 32MHz
#define SET_BIT(REG, BIT)     ((REG) |= (BIT))
#define CLEAR_BIT(REG, BIT)   ((REG) &= ~(BIT))
#define READ_BIT(REG, BIT)    ((REG) & (BIT))
#define CLEAR_REG(REG)        ((REG) = (0x0))
#define WRITE_REG(REG, VAL)   ((REG) = (VAL))
#define READ_REG(REG)         ((REG))
#define MODIFY_REG(REG, CLEARMASK, SETMASK) \
    WRITE_REG((REG), ((READ_REG(REG) & (~(CLEARMASK))) | (SETMASK)))

Q_NORETURN Q_onError(char const * const module, int_t const id) {
    // NOTE: this implementation of the error handler is intended only
    // for debugging and MUST be changed for deployment of the application.
    Q_UNUSED_PAR(module);
    Q_UNUSED_PAR(id);
    QS_ASSERTION(module, id, 10000U); // report assertion to QS

#ifndef NDEBUG
    // light up the user LED
    GPIOA->BSRR = (1U << LD2_PIN);  // turn LD2 on
    for (;;) { // for debugging, hang on in an endless loop...
    }
#else
    NVIC_SystemReset();
    for (;;) { // explicitly "no-return"
    }
#endif
}

void QF::onStartup() {
    // set up the SysTick timer to fire at BSP::TICKS_PER_SEC rate
    SystemCoreClockUpdate();
    SysTick_Config((SystemCoreClock / BSP::TICKS_PER_SEC) + 1U);

    // assign all priority bits for preemption-prio. and none to sub-prio.
    NVIC_SetPriorityGrouping(0U);

    // set priorities of ALL ISRs used in the system, see NOTE1
    NVIC_SetPriority(USART2_IRQn,    0U); // kernel UNAWARE interrupt
    NVIC_SetPriority(EXTI0_IRQn,     QF_AWARE_ISR_CMSIS_PRI + 0U);
    NVIC_SetPriority(SysTick_IRQn,   QF_AWARE_ISR_CMSIS_PRI + 1U);
    // ...

    // enable IRQs...
    NVIC_EnableIRQ(EXTI0_IRQn);

#ifdef Q_SPY
    NVIC_EnableIRQ(USART2_IRQn); // UART1 interrupt used for QS-RX
#endif
}

void QK::onIdle() {
    // toggle an LED on and then off (not enough LEDs, see NOTE2)
    //QF_INT_DISABLE();
    //GPIOA->BSRR = (1U << LD2_PIN); // turn LED[n] on
    //GPIOA->BRR  = (1U << LD2_PIN); // turn LED[n] off
    //QF_INT_ENABLE();

    // Some floating point code is to exercise the VFP...
    float volatile x = 1.73205F;
    x = x * 1.73205F;
    QF_INT_DISABLE();
    Q_ASSERT_INCRIT(300, 2.999F < x);
    QF_INT_ENABLE();

#ifdef Q_SPY
    QS::rxParse();  // parse all the received bytes

    // while Transmit Data Register Empty or TX-FIFO Not Full
    while ((USART2->ISR & USART_ISR_TXE_TXFNF_Msk) != 0U) {
        QF_INT_DISABLE();
        std::uint16_t const b = QS::getByte();
        QF_INT_ENABLE();

        if (b != QS_EOD) {   // not End-Of-Data?
            USART2->TDR = b; // put into the DR register
        }
        else {
            break; // done for now
        }
    }
#elif defined NDEBUG
    // Put the CPU and peripherals to the low-power mode.
    // you might need to customize the clock management for your application,
    // see the datasheet for your particular Cortex-M MCU.
    __WFI(); // Wait-For-Interrupt
#endif
}

bool QS::onStartup(void const *arg) {
    Q_UNUSED_PAR(arg);

    static std::uint8_t qsTxBuf[2*1024]; // buffer for QS-TX channel
    initBuf(qsTxBuf, sizeof(qsTxBuf));

    static std::uint8_t qsRxBuf[100];    // buffer for QS-RX channel
    rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    // enable peripheral clock for USART2 and its pins
    SET_BIT(RCC->APB1LENR, RCC_APB1LENR_USART2EN); // USART2 clock
    SET_BIT(RCC->AHB2ENR, RCC_AHB2ENR_GPIOAEN); // GPIOA clock for pins

    // Configure GPIOA to USART2_TX and USART2_RX pins.........................
    std::uint32_t tmp;

    // configure GPIOA to USART2_TX ...........................................
    // configure alternate function
    tmp = GPIOA->AFR[USART2_TX_PIN >> 3U];
    tmp &= ~(0x0FUL << ((USART2_TX_PIN & 0x07U) * GPIO_AFRL_AFSEL1_Pos));
    tmp |= (7U << ((USART2_TX_PIN & 0x07U) * GPIO_AFRL_AFSEL1_Pos));
    GPIOA->AFR[USART2_TX_PIN >> 3U] = tmp; // 0x700

    // configure IO Direction mode (Input, Output, Alternate or Analog)
    tmp = GPIOA->MODER;
    tmp &= ~(GPIO_MODER_MODE0 << (USART2_TX_PIN * GPIO_MODER_MODE1_Pos));
    tmp |= (2U << (USART2_TX_PIN * GPIO_MODER_MODE1_Pos));
    GPIOA->MODER = tmp;

    // configure the IO Speed
    tmp = GPIOA->OSPEEDR;
    tmp &= ~(GPIO_OSPEEDR_OSPEED0 << (USART2_TX_PIN * GPIO_OSPEEDR_OSPEED1_Pos));
    tmp |= (2U << (USART2_TX_PIN * GPIO_OSPEEDR_OSPEED1_Pos));
    GPIOA->OSPEEDR = tmp;

    // configure the IO Output Type
    tmp = GPIOA->OTYPER;
    tmp &= ~(GPIO_OTYPER_OT0 << USART2_TX_PIN) ;
    GPIOA->OTYPER = tmp;

    // activate the Pull-up or Pull down resistor for the current IO
    tmp = GPIOA->PUPDR;
    tmp &= ~(GPIO_PUPDR_PUPD0 << (USART2_TX_PIN * GPIO_PUPDR_PUPD1_Pos));
    tmp |= (1U << (USART2_TX_PIN * GPIO_PUPDR_PUPD1_Pos));
    GPIOA->PUPDR = tmp;

    // configure GPIOA to USART2_RX ...........................................

    // configure alternate function
    tmp = GPIOA->AFR[USART2_RX_PIN >> 3U];
    tmp &= ~(0xFU << ((USART2_RX_PIN & 0x07U) * GPIO_AFRL_AFSEL1_Pos));
    tmp |= (7U << ((USART2_RX_PIN & 0x7U) * GPIO_AFRL_AFSEL1_Pos));
    GPIOA->AFR[USART2_RX_PIN >> 3U] = tmp;

    // configure IO Direction mode (Input, Output, Alternate or Analog)
    tmp = GPIOA->MODER;
    tmp &= ~(GPIO_MODER_MODE0 << (USART2_RX_PIN * GPIO_MODER_MODE1_Pos));
    tmp |= (2U << (USART2_RX_PIN * GPIO_MODER_MODE1_Pos));
    GPIOA->MODER = tmp;

    // configure the IO Speed
    tmp = GPIOA->OSPEEDR;
    tmp &= ~(GPIO_OSPEEDR_OSPEED0 << (USART2_RX_PIN * GPIO_OSPEEDR_OSPEED1_Pos));
    tmp |= (2U << (USART2_RX_PIN * GPIO_OSPEEDR_OSPEED1_Pos));
    GPIOA->OSPEEDR = tmp;

    // configure the IO Output Type
    tmp = GPIOA->OTYPER;
    tmp &= ~(GPIO_OTYPER_OT0 << USART2_RX_PIN) ;
    GPIOA->OTYPER = tmp;

    // activate the Pull-up or Pull down resistor for the current IO
    tmp = GPIOA->PUPDR;
    tmp &= ~(GPIO_PUPDR_PUPD0 << (USART2_RX_PIN * GPIO_PUPDR_PUPD1_Pos));
    tmp |= (1U << (USART2_RX_PIN * GPIO_PUPDR_PUPD1_Pos));
    GPIOA->PUPDR = tmp;


    // configure USART2..............................................
    MODIFY_REG(USART2->CR1,
        (USART_CR1_M | USART_CR1_PCE | USART_CR1_PS |
         USART_CR1_TE | USART_CR1_RE | USART_CR1_OVER8),
        0U  | // data==8bits
        0U  | // parity==none
        12U | // direction==TX & RX
        0U);  // oversampling==16
    MODIFY_REG(USART2->CR2,
        USART_CR2_STOP,
        0U);  // stop-bits==1
    MODIFY_REG(USART2->CR3,
        USART_CR3_RTSE | USART_CR3_CTSE,
        0U);  // hardware-flow=NO

    // baud rate
    USART2->BRR = QS_UART_DIV_SAMPLING16(
                       SystemCoreClock, // USART2 clock
                       115200U,         // baud rate
                       0U);             // prescaler

    MODIFY_REG(USART2->PRESC,
        USART_PRESC_PRESCALER,
        0U); // prescaler=DIV1

    // FIFO thresholds
    MODIFY_REG(USART2->CR3,
        USART_CR3_TXFTCFG,
        0U << USART_CR3_TXFTCFG_Pos); // TX-FIFO=threshold-1
    MODIFY_REG(USART2->CR3,
        USART_CR3_RXFTCFG,
        0U << USART_CR3_RXFTCFG_Pos); // RX-FIFO=threshold-1

    SET_BIT(USART2->CR1, USART_CR1_FIFOEN);  // enable FIFO

    // asynch mode
    CLEAR_BIT(USART2->CR2, USART_CR2_LINEN | USART_CR2_CLKEN);
    CLEAR_BIT(USART2->CR3, USART_CR3_SCEN | USART_CR3_IREN | USART_CR3_HDSEL);

    // RXNE and RX FIFO Not Empty Interrupt Enable
    SET_BIT(USART2->CR1, USART_CR1_RXNEIE_Msk);

    SET_BIT(USART2->CR1, USART_CR1_UE); // enable USART

    // configure Timer5 for delivering QS time-stamp...........................
    SET_BIT(RCC->APB1LENR, RCC_APB1LENR_TIM5EN);

    tmp = TIM5->CR1;
    MODIFY_REG(tmp, TIM_CR1_DIR | TIM_CR1_CMS, 0U); // counter-mode=Up
    MODIFY_REG(tmp, TIM_CR1_CKD, 0U); // clock-division=1
    WRITE_REG(TIM5->CR1, tmp);

    WRITE_REG(TIM5->ARR, 0xFFFFFFFFU); // auto-reload
    WRITE_REG(TIM5->PSC, 0U); // prescaler=1
    SET_BIT(TIM5->EGR, TIM_EGR_UG); // update event to reload prescaler

    CLEAR_BIT(TIM5->CR1, TIM_CR1_ARPE); // disable ARR preload
    MODIFY_REG(TIM5->SMCR, TIM_SMCR_SMS | TIM_SMCR_ECE, 0U); // internal clock
    MODIFY_REG(TIM5->CR2, TIM_CR2_MMS, 0U); // reset timer synchronization
    CLEAR_BIT(TIM5->SMCR, TIM_SMCR_MSM); // disable master-slave

    // enable Timer5 to start time stamp
    SET_BIT(TIM5->CR1, TIM_CR1_CEN);

    return true; // return success
}

QSTimeCtr QS::onGetTime() { // NOTE: invoked with interrupts DISABLED
    return TIM5->CNT; // 32-bit Timer5 count
}

void QS::onFlush() {
    for (;;) {
        std::uint16_t const b = getByte();
        if (b != QS_EOD) {
            while ((USART2->ISR & USART_ISR_TXE_Msk) == 0U) { // TXE not empty
            }
            USART2->TDR = b;
        }
        else {
            break;
        }
    }
}
